[package]
name = "pecan-parser"
version = "0.1.0"
authors = ["Caleb Jones <code@calebjones.net>"]
repository = "https://github.com/porglezomp/pecan-lang"
keywords = ["parser", "pecan-lang"]
build = "build.rs"

[build-dependencies]
lalrpop = "0.11.0"

[dependencies]
lalrpop-util = "0.11.0"
nom = "^1.2.3"

[[bin]]
name = "pecan-parser"
doc = false
